포스팅 테스트2

--- a/_posts/2023-01-05-testPage.md
+++ b/_posts/2023-01-05-testPage.md
@@ -15,9 +15,9 @@ categories: testCategory
 tags: [example, testTag]
 sidebar: [article-menu,category-list]
 ---
+## 변수
 
-
-## 선언
+### 선언
 
 ```go
 var a int
@@ -31,21 +31,21 @@ c = 3.5
 d,e = true, false
 ```
 
-## 선언 및 초기화
+### 선언 및 초기화
 
 ```go
 var f,g,h int = 1,2,3
 var i float32 = 5.6
 ```
 
-## 선언 동시 초기화
+### 선언 동시 초기화
 
 ```go
 var j = 4.7
 var k,l = "Hi", true
 ```
 
-## 여러 개 선언
+### 여러 개 선언
 
 ```go
 var(
@@ -55,7 +55,7 @@ var(
 )
 ```
 
-## 짧은 선언
+### 짧은 선언
 
 - 함수 안에서만 사용(전역X), 한 번 초기화가 되면 재할당 할 수 없음
 - 주로 제한된 범위의 함수내에서 사용 할 경우 가독성을 높일 수 있음
@@ -78,3 +78,20 @@ func main() {
 ```
 
 
+{% highlight python wl linenos %}
+
+[x for x in range(10)]
+
+{% endhighlight %}
+
+
+
+![image](/assets/images/banners/home.jpeg)
+
+![image](/assets/images/banners/default.jpeg)
+
+![image](https://user-images.githubusercontent.com/118060948/210904864-bf5defa0-5ea6-4d35-9a53-50ad3d63819d.png)
+
+![image](https://user-images.githubusercontent.com/118060948/210904748-01d3e9f4-252b-44ee-be41-4b6e8f4c8a32.png)
+
+![image](https://user-images.githubusercontent.com/118060948/210905570-d43ff0fe-deb1-46db-8d75-c2a09670c268.png)
