--- a/_posts/2023-01-09-마크다운문법.md
+++ b/_posts/2023-01-09-마크다운문법.md
@@ -12,7 +12,7 @@ banner:
   heading_style: "font-size: 4em; font-weight: bold;"
   subheading_style: "color: gold"
 categories: markdown
-tags: [markdown]
+tags: [markdown, 깃허브 블로그]
 sidebar: [article-menu,category-list] 
 ---
 
