--- a/_posts/2023-01-13-Go 기초문법 [1] - 변수.md
+++ b/_posts/2023-01-13-Go 기초문법 [1] - 변수.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Go 기초 문법 [1]
+title: Go 기초 문법 [1] - 변수
 subtitle: 변수
 author: useok
 banner:
@@ -12,7 +12,7 @@ banner:
   heading_style: "font-size: 4em; font-weight: bold;"
   subheading_style: "color: gold"
 categories: [golang]
-tags: []
+tags: [golang]
 sidebar: [article-menu,category-list] 
 ---
 ## 변수
