--- a/_posts/2023-01-14-Go 기초문법 [2] - 상수.md
+++ b/_posts/2023-01-14-Go 기초문법 [2] - 상수.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Go 기초문법 [2]
+title: Go 기초문법 [2] - 상수
 subtitle: 상수
 author: useok
 banner:
@@ -12,7 +12,7 @@ banner:
   heading_style: "font-size: 4em; font-weight: bold;"
   subheading_style: "color: gold"
 categories: [golang]
-tags: []
+tags: [golang]
 sidebar: [article-menu,category-list] 
 ---
 ## 상수
