post 깃허브 블로그

--- a/_posts/2023-01-15-깃허브 블로그 만들기.md
+++ b/_posts/2023-01-15-깃허브 블로그 만들기.md
@@ -19,7 +19,7 @@ sidebar: [article-menu,category-list]
 ## 포스트를 읽기 전에
 - git과 docker가 설치 되어 있어야 합니다.<br>
 - git과 docker에 대한 어느정도 이해가 있다는 가정하에 작성<br>
-- 위에 해당되지 않는다면 하단의 참조 링크를 추천합니다.
+- 위에 해당되지 않는다면 하단의 참고 링크를 추천합니다.
 
 
 ---
@@ -40,7 +40,7 @@ sidebar: [article-menu,category-list]
 ### GIthub Pages 설정
 
 - 생성한 Repository → Settings → Pages 이동
-    - Source는 ‘Deply from a branch’
+    - Source는 ‘Deploy from a branch’
     - Branch는 ‘main’을 선택한 뒤 Save
 - 잠시 후, 배포 됐다는 메시지가 나오고, 새로고침을 하면 배포된 주소가 상단에 보여짐
 
