chore: 포스트 배너 타이틀 폰트사이즈 변경

--- a/_posts/2023-01-16-깃허브 블로그 검색엔진 등록(네이버, 구글, 다음).md
+++ b/_posts/2023-01-16-깃허브 블로그 검색엔진 등록(네이버, 구글, 다음).md
@@ -9,8 +9,8 @@ banner:
   background: "#000"
   height: "40vh"
   min_height: "10vh"
-  heading_style: "font-size: 3em; font-weight: bold;"
-  subheading_style: "color: gold"
+  heading_style: "font-size: 2.5rem; font-weight: bold;"
+  subheading_style: "color: gold;"
 categories: [깃허브 블로그]
 tags: [깃허브 블로그]
 sidebar: [article-menu,category-list] 
@@ -22,7 +22,7 @@ sidebar: [article-menu,category-list]
 웹사이트 내 모든 페이지의 목록을 나열한 파일로, 일반적인 크롤링 과정에서 쉽게 발견되지 않는 웹페이지도 문제없이 크롤링되고 색인될 수 있음
 
 - sitemap.xml
-    - [https://github.com/uuuseok/uuuseok.github.io/blob/main/sitemap.xml](https://github.com/uuuseok/uuuseok.github.io/blob/main/sitemap.xml)
+    - [sitemap.xml 링크](https://github.com/uuuseok/uuuseok.github.io/blob/main/sitemap.xml)
     - 위 링크에서 텍스트를 복사해 remote 설정된 로컬 디렉토리의 최상위 경로에 sitemap.xml 파일 생성
 
 
@@ -34,7 +34,7 @@ sidebar: [article-menu,category-list]
 웹사이트에 대한 검색엔진 로봇들의 접근을 조절하고 제어해주며, 로봇들에게 sitemap.xml이 어디에 있는지 알려주는 역할
 
 - robots.txt
-    - [https://github.com/uuuseok/uuuseok.github.io/blob/main/robots.txt](https://github.com/uuuseok/uuuseok.github.io/blob/main/robots.txt)
+    - [robots.txt 링크](https://github.com/uuuseok/uuuseok.github.io/blob/main/robots.txt)
     - 위 링크에서 텍스트를 복사해 remote 설정된 로컬 디렉토리의 최상위 경로에 robots.txt 파일 생성
         
 
@@ -45,7 +45,7 @@ sidebar: [article-menu,category-list]
 RSS Feed로 등록될 수 있도록 함
 
 - feed.xml
-    - [https://github.com/uuuseok/uuuseok.github.io/blob/main/feed.xml](https://github.com/uuuseok/uuuseok.github.io/blob/main/feed.xml)
+    - [feed.xml 링크](https://github.com/uuuseok/uuuseok.github.io/blob/main/feed.xml)
     - 위 링크에서 텍스트를 복사해 remote 설정된 로컬 디렉토리의 최상위 경로에 feed.xml 파일 생성
 
         
@@ -54,7 +54,7 @@ RSS Feed로 등록될 수 있도록 함
 
 - url: “https://{username}.github.io” 추가
   <details>
-  <summary>참고 이미지</summary>
+  <summary>참고 이미지 </summary>
   <div markdown="1">
   ![image](https://user-images.githubusercontent.com/118060948/212578421-3485a006-6bb6-4eb2-ba66-16dcbee91099.png)
   </div>
