--- a/_posts/2023-01-14-Go 기초문법 [3] - 열거형 iota.md
+++ b/_posts/2023-01-14-Go 기초문법 [3] - 열거형 iota.md
@@ -9,7 +9,7 @@ banner:
   background: "#000"
   height: "40vh"
   min_height: "10vh"
-  heading_style: "font-size: 4em; font-weight: bold;"
+  heading_style: "font-size: 2.5rem; font-weight: bold;"
   subheading_style: "color: gold"
 categories: [golang]
 tags: [golang]
