--- a/_posts/2023-01-14-999999-Go 기초문법 [3] - 열거형 iota.md
+++ b/_posts/2023-01-14-999999-Go 기초문법 [3] - 열거형 iota.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Go 기초문법 [3] - 열거형 iota
-subtitle: 열거형 - iota
+subtitle: 열거형 iota
 author: useok
 banner:
   image: assets/images/banners/home.jpeg
