--- a/_posts/2023-01-14-999999-Go 기초문법 [4] - 제어문 if.md
+++ b/_posts/2023-01-14-999999-Go 기초문법 [4] - 제어문 if.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Go 기초문법 [4] - 제어문 if
-subtitle: if
+subtitle: 제어문 if
 author: useok
 banner:
   image: assets/images/banners/home.jpeg
