--- a/_posts/2023-01-16-000000-깃허브 블로그 만들기 [2] - 검색엔진 등록(네이버, 구글, 다음).md
+++ b/_posts/2023-01-16-000000-깃허브 블로그 만들기 [2] - 검색엔진 등록(네이버, 구글, 다음).md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 깃허브 블로그 만들기 [2] - 검색엔진 등록(네이버, 구글, 다음)
-subtitle: 깃허브 블로그 검색엔진 등록(네이버, 구글, 다음)
+subtitle: 검색엔진 등록(네이버, 구글, 다음)
 author: useok
 banner:
   image: assets/images/banners/home.jpeg
