--- a/_posts/2023-01-16-143259-Go 기초문법 [5] - 제어문 switch.md
+++ b/_posts/2023-01-16-143259-Go 기초문법 [5] - 제어문 switch.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Go 기초문법 [5] - 제어문 switch
-subtitle: 제어문
+subtitle: 제어문 switch
 author: useok
 banner:
   image: assets/images/banners/home.jpeg
