--- a/_posts/2023-01-25-111125-docker [2] - docker 주요 명령어.md
+++ b/_posts/2023-01-25-111125-docker [2] - docker 주요 명령어.md
@@ -20,7 +20,10 @@ sidebar: [article-menu,category-list]
 ```
 💡 주황색 표시된 명령어만 잘 쓸 수 있으면 됨!
 ```
-docker search ubuntu : 이미지 검색
+<br>
+
+docker search {image name} : 이미지 검색
+<br>`ex) docker search ubuntu : ubuntu 이미지 검색`
 
 docker search —limit-5 ubuntu : 5개 까지 검색
 
@@ -50,7 +53,7 @@ docker ps -a -q : 모든 컨테이너의 ID만 확인
 
 <span style="background-color: #F7DDBE">docker start {ID or name} : 컨테이너 실행</span>
 
-<span style="background-color: #F7DDBE">docker run : 이미지 생성과 동시에 실행(옵션이 중요)</span><br>
+<span style="background-color: #F7DDBE">docker run {image} : 이미지 생성과 동시에 실행(옵션이 중요)</span><br>
 ** docker pull 과 docker create를 동시에 시행하는 느낌 (pull과 create는 사용할 일이 많지 않음)<br>
 ** 밑의 옵션이 중요함
 
@@ -64,7 +67,7 @@ docker ps -a -q : 모든 컨테이너의 ID만 확인
 - `--restart always` : 도커 데몬이 실행됐을 때 컨테이너 자동으로 실행
 
   ```
-  💡 ex)
+  ex)
   docker run -itd -p 5001:5000 -v /host/directory:/workspace -—name test_container -—restart always ubuntu:20.04
 
 
@@ -85,7 +88,6 @@ docker ps -a -q : 모든 컨테이너의 ID만 확인
 
   - 해당 컨테이너는 도커 데몬이 샐행됐을 때 컨테이너가 자동으로 실행됨
   (—resatrt always)
-
   ```
 
 
@@ -105,11 +107,9 @@ docker system df : docker가 사용하고 있는 저장매체 현황 확인
 docker container stats : 실행중인 컨테이너 사용 리소스 확인
 
 <span style="background-color: #F7DDBE">docker exec {옵션} {컨테이너ID or 컨테이너name} {명령} {인자} : 실행중인 컨테이너에 명령 실행하기</span>
+<br>
+`ex) docker exec -it apachweb /bin/sh`
 
-  ```
-  💡 ex)
-  docker exec -it apachweb /bin/sh
-  ```
 
 docker stop $(docker ps -a -q) : 모든 컨테이너 중지
 
