--- a/_posts/2023-01-09-000000-마크다운문법.md
+++ b/_posts/2023-01-09-000000-마크다운문법.md
@@ -11,7 +11,7 @@ banner:
   min_height: "10vh"
   heading_style: "font-size: 2.5rem; font-weight: bold;"
   subheading_style: "color: gold"
-categories: markdown
+categories: [깃허브 블로그]
 tags: [markdown, 깃허브 블로그]
 sidebar: [article-menu,category-list] 
 ---
