--- a/_posts/2023-02-27-144442-아파치 카프카 기초 [2] - 토픽.md
+++ b/_posts/2023-02-27-144442-아파치 카프카 기초 [2] - 토픽.md
@@ -12,10 +12,14 @@ banner:
   heading_style: "font-size: 2.5rem; font-weight: bold;"
   subheading_style: "color: gold"
 categories: [apache kafka]
-tags: [apache kafka]
+tags: [apache kafka, topic]
 sidebar: [article-menu,category-list] 
 ---
 ## 토픽
+
+참고 강의 : [https://www.inflearn.com/course/아파치-카프카-입문/dashboard](https://www.inflearn.com/course/%EC%95%84%ED%8C%8C%EC%B9%98-%EC%B9%B4%ED%94%84%EC%B9%B4-%EC%9E%85%EB%AC%B8/dashboard)
+
+---
 
 카프카에는 다양한 데이터가 들어갈 수 있는데, 그 데이터가 들어가는 공간을 토픽이라고 부름
 
