--- a/_posts/2023-02-27-142603-아파치 카프카 기초 [1] - 아파치 카프카 개요.md
+++ b/_posts/2023-02-27-142603-아파치 카프카 기초 [1] - 아파치 카프카 개요.md
@@ -12,7 +12,7 @@ banner:
   heading_style: "font-size: 2.5rem; font-weight: bold;"
   subheading_style: "color: gold"
 categories: [apache kafka]
-tags: [apache kafka]
+tags: [apache kafka, producer, consumer]
 sidebar: [article-menu,category-list] 
 ---
 ## 아파치 카프카 개요
