--- a/_posts/2023-02-28-021154-윈도우 지우고 서버용 우분투 설치.md
+++ b/_posts/2023-02-28-021154-윈도우 지우고 서버용 우분투 설치.md
@@ -12,7 +12,7 @@ banner:
   heading_style: "font-size: 2.5rem; font-weight: bold;"
   subheading_style: "color: gold"
 categories: [ubuntu]
-tags: [ubuntu, refus]
+tags: [ubuntu, rufus]
 sidebar: [article-menu,category-list] 
 ---
 ## 윈도우 지우고 서버용 우분투 설치
@@ -37,7 +37,7 @@ sidebar: [article-menu,category-list]
 
 ![Untitled](/assets/images/postImages/2023-02-28-021154-윈도우 지우고 서버용 우분투 설치/Untitled 2.png)
 
-### 03. Refus 설치
+### 03. Rufus 설치
 
 [https://rufus.ie/ko/](https://rufus.ie/ko/)
 
