--- a/_posts/2023-02-28-100752-아파치 카프카 기초 [4] - 파티셔너(Partitioner).md
+++ b/_posts/2023-02-28-100752-아파치 카프카 기초 [4] - 파티셔너(Partitioner).md
@@ -12,7 +12,7 @@ banner:
   heading_style: "font-size: 2.5rem; font-weight: bold;"
   subheading_style: "color: gold"
 categories: [apache kafka]
-tags: [파티셔너]
+tags: [apache kafka, partitioner]
 sidebar: [article-menu,category-list] 
 ---
 ## 파티셔너(Partitioner)
