--- a/_posts/2023-02-28-182401-AWS에 카프카 클러스터 설치, 실행하기.md
+++ b/_posts/2023-02-28-182401-AWS에 카프카 클러스터 설치, 실행하기.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: AWS에 카프카 클러스터 설치, 실행하기
+title: 어파치 카프카 기초 [8] - AWS에 카프카 클러스터 설치, 실행하기
 subtitle: AWS에 카프카 클러스터 설치, 실행하기
 author: useok
 banner:
@@ -12,7 +12,7 @@ banner:
   heading_style: "font-size: 2.5rem; font-weight: bold;"
   subheading_style: "color: gold"
 categories: [apache kafka]
-tags: [AWS,kafka,zookeeper,kafka cluster]
+tags: [apache kafka,AWS,zookeeper,kafka cluster]
 sidebar: [article-menu,category-list] 
 ---
 ## AWS에 카프카 클러스터 설치, 실행하기
