--- a/_posts/2023-05-02-084244-아파치 카프카 기초 [9] - 카프카 프로듀서 애플리케이션.md
+++ b/_posts/2023-05-02-084244-아파치 카프카 기초 [9] - 카프카 프로듀서 애플리케이션.md
@@ -30,7 +30,7 @@ sidebar: [article-menu,category-list]
 
 카프카 클라이언트인 컨슈머와 프로듀서를 사용하기 위해서는 아파치 카프카 라이브러리를 추가해야 함
 
-라이브러리는 gradle이나 maven 같은 도구를 사용하여 편리하게 가져올 수 있음
+라이브러리는 gradle이나 maven 같은 라이브러리 관리 도구를 사용하여 편리하게 가져올 수 있음
 
 ![Untitled](/assets/images/postImages/2023-05-02-084244-아파치 카프카 기초 [9] - 카프카 프로듀서 애플리케이션/Untitled.png)
 
@@ -55,6 +55,7 @@ Properties configs = new Properties();
 ```
 
 ```java
+//부트스트랩 서버 옵션을 통해 카프카 브로커를 설정
 //부트스트랩 서버 설정을 로컬 호스트의 카프카를 바라보도록 설정함
 configs.put("bootstrap.servers", "localhost:9092");
 ```
