--- a/_posts/2023-05-02-120332-아파치 카프카 기초 [10] - 카프카 컨슈머 애플리케이션.md
+++ b/_posts/2023-05-02-120332-아파치 카프카 기초 [10] - 카프카 컨슈머 애플리케이션.md
@@ -21,11 +21,11 @@ sidebar: [article-menu,category-list]
 
 다른 메시징 시스템들 같은 경우 컨슈머가 데이터를 가져가면 큐 내부 데이터가 사라지는데, 카프카에서는 컨슈머가 데이터를 가져가더라도 데이터가 사라지지 않음
 
-이와 같은 특징은 카프카, 카프카 컨슈머를 데이터 파이프라인으로 운영하는데 핵십적인 역할을 함
+이와 같은 특징은 카프카, 카프카 컨슈머를 데이터 파이프라인으로 운영하는데 핵심적인 역할을 함
 
 ### 컨슈머의 역할
 
-- Topic의 Partion으로부터 데이터 Polling
+- Topic의 Partition으로부터 데이터 Polling
     - 카프카 컨슈머는 토픽 내부의 파티션에 저장된 데이터를 가져오는데 이를 폴링(polling)이라 함
 - Partition offset 위치 기록(commit)
     - 오프셋(파티션에 있는 데이터의 번호) 위치 커밋
@@ -167,12 +167,12 @@ for구문 내부에서 record변수의 value() 메서드로 반환된 값이 이
 
 ![Untitled](/assets/images/postImages/2023-05-02-120332-아파치 카프카 기초 [10] - 카프카 컨슈머 애플리케이션/Untitled 6.png)
 
-- 2 consumers & 2 partitions
+- 2 partitions & 2 consumers
 - 2개의 컨슈머로 이루어진 컨슈머 그룹일 경우에는 각 컨슈머가 각각의 파티션을 할당하여 데이터를 가져가서 처리
 
 ![Untitled](/assets/images/postImages/2023-05-02-120332-아파치 카프카 기초 [10] - 카프카 컨슈머 애플리케이션/Untitled 7.png)
 
-- 3 consumers & 2 partitions
+- 2 partitions & 3 consumers 
 - 3개의 컨슈머로 이루어진 컨슈머 그룹일 경우 이미 파티션들이 각 컨슈머에 할당되었기 때문에 더이상 할당될 파티션이 없어서 동작하지 않음
 
 이와 같이 여러 파티션을 가진 토픽에 대해서 컨슈머를 병렬처리하고 싶다면 반드시 컨슈머를 파티션의 개수보다 같거나 적게 설정
