--- a/_posts/2023-08-03-173744-AWS EC2 메모리 스왑.md
+++ b/_posts/2023-08-03-173744-AWS EC2 메모리 스왑.md
@@ -17,7 +17,7 @@ sidebar: [article-menu,category-list]
 ---
 ## AWS EC2 메모리 스왑
 
-### 01. 현재 메모리 메모리 확인
+### 01. 현재 메모리 확인
 
 `free -h`
 
@@ -56,7 +56,26 @@ dd 명령어로 8GB(128MB*64)의 swqp 메모리를 할당하는데, 여기서 bs
 열린 파일의 하단에 밑의 텍스트를 작성후 저장
     
 `/swapfile swap swap defaults 0 0`
-    
+
+
+
+### 08. 스왑 메모리 제거
+
+- 할당한 스왑공간 제거
+
+  `sudo swapoff /swapfile`
+
+- 스왑파일 제거
+
+  `sudo rm /swapfile`
+
+- 부팅 시 스왑 파일 시작 설정 제거
+
+  `sudo vi /etc/fstab`
+
+  작성했던 `/swapfile swap swap defaults 0 0` 삭제
+
+
 
 ---
 
