--- a/_posts/2023-02-28-021154-윈도우 지우고 서버용 우분투 설치.md
+++ b/_posts/2023-02-28-021154-윈도우 지우고 서버용 우분투 설치.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 윈도우 지우고 서버용 우분투 설치
+title: 노트북 홈서버 구축 [1] - 윈도우 지우고 서버용 우분투 설치
 subtitle: 윈도우 지우고 서버용 우분투 설치
 author: useok
 banner:
