--- a/_posts/2023-11-15-183929-Docker 이미지 저장경로 변경.md
+++ b/_posts/2023-11-15-183929-Docker 이미지 저장경로 변경.md
@@ -19,7 +19,7 @@ sidebar: [article-menu,category-list]
 
 ### [00.] 현재 Docker 데이터 저장 위치 확인
 
-`docker info -f '{{ .DockerRootDir }}'`
+`docker info | grep "Docker Root Dir"`
 
 디폴트 값인 현재 저장 위치 `/var/lib/docker` 출력됨
 
@@ -47,7 +47,7 @@ systemctl stop docker
 systemctl start docker
 ```
 
-`docker info -f '{{ .DockerRootDir }}'`
+`docker info | grep "Docker Root Dir"`
 
 ![Untitled](/assets/images/postImages/2023-11-15-183929-Docker 이미지 저장경로 변경/Untitled 2.png)
 
