--- a/_posts/2023-12-03-030655-노트북 홈서버 구축 [2] - 네트워크 설정.md
+++ b/_posts/2023-12-03-030655-노트북 홈서버 구축 [2] - 네트워크 설정.md
@@ -40,6 +40,7 @@ network:
 ```
 <br><br><br><br>
 `sudo netplan try`
+`sudo netplan apply`
 
 무선랜은 여전히 DISABLED가 나오지만, 유선랜은 DISABLED가 사라졌고, 랜선 연결 시 인터넷이 가능해짐
 
